# PynJa

./: CMakeLists.txt  README.md  pynja.cpp  pynja.hpp
Example/: data.json  index.thi  main.cpp
Example/ui/: menu.thi  y.thi
